--- a/package.json
+++ b/package.json
@@ -1,24 +1,35 @@
 {
   "name": "absolute",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "dependencies": {
+    "bootstrap-sass": "^3.3.7",
     "browser-sync": "^2.18.13",
     "gulp": "^3.9.1",
+    "gulp-dependency-install": "0.0.8",
     "gulp-less": "^3.3.2",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
+    "gulp-sass": "^3.1.0",
     "gulp-util": "^3.0.8",
     "path": "^0.12.7"
-  },
-  "devDependencies": {
-    "bootstrap-sass": "^3.3.7",
-    "gulp-sass": "^3.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Smikex/absolute.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Smikex/absolute/issues"
+  },
+  "homepage": "https://github.com/Smikex/absolute#readme",
+  "description": "",
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-sass": "^3.1.0"
+  }
 }
